# libSEDML

./: .gitignore  .gitmodules  .sonarcloud.properties  .travis.yml  CMakeLists.txt  LICENSE.txt  NEWS.md  README.md  conanfile.txt  formatfiles.bat  formatfiles.sh  generate.bat  generate.sh  index.html  libSEDML.doxyfile  params.json
.ci/: checkout-submodules.sh  create-sdist.sh  run.sh
CMakeModules/: FindLIBNUML.cmake  FindLIBSBML.cmake
bindings/: CMakeLists.txt
bindings/csharp/: AssemblyInfo.cs.in  CMakeLists.txt  compile-native-files.cmake  libsedml.i  local.cpp  local.i
bindings/java/: CMakeLists.txt  Manifest.txt.in  compile-native-files.cmake  libsedml.i  local.cpp  local.i
bindings/perl/: CMakeLists.txt  LibSEDML.txt  libsedml.i  list_get_fix.i  list_of_fix.i  local.cpp  local.i
bindings/python/: CMakeLists.txt  add_version.cmake  libsedml.i  local-contrib.i  local.cpp  local.i
bindings/r/: CMakeLists.txt  DESCRIPTION.in  NAMESPACE  libsedml.i  local.cpp  local.i  patch-swig-file.cmake
bindings/ruby/: CMakeLists.txt  libsedml.i  local.cpp  local.i
bindings/swig/: ListWrapper.h  OStream.cpp  OStream.h  libsedml.h  libsedml.i
dev/: README.md  algorithm_code.cpp  algorithm_headers.h  algorithmparameter_code.cpp  create-source-package.sh  createNewElementDictObj.py  createNewPackage.py  doc_code.cpp  doc_headers.h  fileHeaders.py  generalFunctions.py  run.py  (+15 more)
examples/: CMakeLists.txt  README.md
examples/c/: CMakeLists.txt  README.md  create_sedml.c  echo_sedml.c  print_sedml.c
examples/c++/: CMakeLists.txt  README.md  create_nested_task.cpp  create_sedml.cpp  echo_sedml.cpp  print_sedml.cpp
examples/csharp/: CMakeLists.txt  README.md  create_sedml.cs  echo_sedml.cs  print_sedml.cs
examples/java/: CMakeLists.txt  README.md  create_sedml.java  echo_sedml.java  print_sedml.java
examples/perl/: README.md  create_sedml.pl  echo_sedml.pl  print_sedml.pl
examples/python/: README.md  create_dependent_variable.py  create_nested_algoritm.py  create_nested_task.py  create_pe.py  create_plot_with_styles.py  create_sedml.py  create_sedml2.py  create_subplots.py  echo_sedml.py  get_all_tasks.py  print_sedml.py  validate.py
examples/r/: README.md  create_sedml.R  echo_sedml.R  print_sedml.R
examples/ruby/: README.md  create_sedml.rb  echo_sedml.rb  print_sedml.rb
examples/xml/l1v1/: IkBNFkB_Signaling.xml  leloupCellml.xml
examples/xml/l1v2/: IkBNFkB_Signaling.xml  leloupCellml.xml  leloupSbml.xml  v3-example1-repeated-steady-scan-oscli.xml  v3-example2-oscli-nested-pulse.xml  v3-example3-repeated-stochastic-runs.xml  v3-example4-repeated-scan-oscli.xml  v3-example5-boris-2d-scan.xml
examples/xml/l1v3/: lorenz.xml  plotting-data-numl.xml  vanderpol.xml
examples/xml/l1v4/: dependent_example.xml  nested_example.xml  pe-example.xml
sedml/: Algorithm.cpp  CMakeLists.txt  Change.cpp  Change.h  ChangeAttribute.cpp  ChangeAttribute.h  ComputeChange.cpp  ComputeChange.h  DataGenerator.cpp  DataGenerator.h  DataSet.cpp  DataSet.h  Output.cpp  Output.h  Plot2D.cpp  Plot2D.h  Plot3D.cpp  Plot3D.h  RemoveXML.cpp  RemoveXML.h  Report.cpp  Report.h  SedAddXML.cpp  SedAddXML.h  SedAlgorithm.cpp  SedAlgorithm.h  SedAlgorithmParameter.cpp  SedAlgorithmParameter.h  SedBase.cpp  SedBase.h  SedChange.cpp  SedChange.h  SedChangeAttribute.cpp  SedChangeAttribute.h  SedChangeXML.cpp  SedChangeXML.h  SedComputeChange.cpp  SedComputeChange.h  SedConstructorException.cpp  SedConstructorException.h  (+109 more)
sedml/common/: common.h  extern.h  libsedml-config-common.h  libsedml-config-common.h.cmake  libsedml-config.h  libsedml-namespace.h  libsedml-namespace.h.cmake  libsedml-package.h  libsedml-package.h.cmake  libsedml-version.cpp  libsedml-version.h.cmake  operationReturnValues.h  sedmlfwd.h
src/: CMakeLists.txt
src/bindings/: CMakeLists.txt
src/bindings/csharp/: AssemblyInfo.cs.in  CMakeLists.txt  compile-native-files.cmake  local.cpp  local.i
src/bindings/java/: CMakeLists.txt  Manifest.txt.in  compile-native-files.cmake  libsedml.i  local.cpp  local.i
src/bindings/perl/: CMakeLists.txt  list_get_fix.i  local.cpp  local.i
src/bindings/python/: CMakeLists.txt  MANIFEST.in  add_version.cmake  libsedml.i  local-contrib.i  local.cpp  local.i  local_numl.cpp  setup.py
src/bindings/ruby/: CMakeLists.txt  libsedml.i  local.cpp  local.i
src/bindings/swig/: ASTNodes.i  ListWrapper.h  OStream.cpp  OStream.h  libsedml.h  libsedml.i  std_set.i
src/kisao/: KISAO.csv  transform_kisao.py
src/sedml/: CMakeLists.txt  SEDMLTypeCodes.h  SedAbstractCurve.cpp  SedAbstractCurve.h  SedAbstractTask.cpp  SedAbstractTask.h  SedAddXML.cpp  SedAddXML.h  SedAdjustableParameter.cpp  SedAdjustableParameter.h  SedAlgorithm.cpp  SedAlgorithm.h  SedAlgorithmParameter.cpp  SedAlgorithmParameter.h  SedAnalysis.cpp  SedAnalysis.h  SedAppliedDimension.cpp  SedAppliedDimension.h  SedAxis.cpp  SedAxis.h  SedBase.cpp  SedBase.h  SedBounds.cpp  SedBounds.h  SedChange.cpp  SedChange.h  SedChangeAttribute.cpp  SedChangeAttribute.h  SedChangeXML.cpp  SedChangeXML.h  SedColumnScaling.cpp  SedColumnScaling.h  SedComputeChange.cpp  SedComputeChange.h  SedConstructorException.cpp  SedConstructorException.h  SedCurve.cpp  SedCurve.h  SedDataDescription.cpp  SedDataDescription.h  (+177 more)
src/sedml/common/: SedOperationReturnValues.cpp  SedOperationReturnValues.h  SedmlEnumerations.cpp  SedmlEnumerations.h  common.h  extern.h  libsedml-config-common.h.cmake  libsedml-config.h  libsedml-namespace.h.cmake  libsedml-version.cpp  libsedml-version.h.cmake  sedmlfwd.h
tests/: CMakeLists.txt  TestIssues.cpp  TestRunner.cpp
tests/test-data/: case_02.xml  create_logtest.py  curve_nox_l1v3.sedml  curve_nox_l1v4.sedml  issue_140.sedml  issue_63.sedml  issue_77.sedml  issue_89.sedml  issue_91.sedml  issue_93.sedml  line_uses_style.sedml  logtest.sedml  logtest3d.sedml  marker_uses_style.sedml  model_nolang_l1v3.sedml  model_nolang_l1v4.sedml  sort_curves.sedml  sort_subtasks.sedml  sort_surfaces.sedml  surface_noxy_l1v3.sedml  surface_noxy_l1v4.sedml  test-issue31-sedml.xml  teusink.sbml  teusink_experiment-user-3.sedml
(+1143 files in other folders)
